package com.example.gqw.analytics.entity;

import jakarta.persistence.Column;
import jakarta.persistence.Entity;
import jakarta.persistence.EnumType;
import jakarta.persistence.Enumerated;
import jakarta.persistence.Id;
import jakarta.persistence.Table;
import lombok.Getter;
import lombok.NoArgsConstructor;
import lombok.Setter;

@Getter
@Setter
@NoArgsConstructor
@Entity
@Table(name = "event_attribute_type", schema = "analytics")
public class EventAttributeType {

    @Id
    @Column(nullable = false, length = 64)
    private String code;

    @Column(nullable = false, length = 128)
    private String name;

    @Column(length = 512)
    private String description;

    @Enumerated(EnumType.STRING)
    @Column(nullable = false, length = 32)
    private MetricValueKind valueKind = MetricValueKind.TEXT;

    @Column(length = 32)
    private String unitDefault;

    @Column(nullable = false)
    private Boolean isSystem = false;

    @Column(nullable = false)
    private Boolean isActive = true;
}

